syntax="proto3";
package services;
option go_package ="./;pb";
//import "google/protobuf/empty.proto";
//用户实体
message User {
  int64 id = 1;
  string name = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
  string avatar = 6;
  string background_image = 7;
  string signature = 8;
  int64 total_favorited = 9;
  int64 work_count = 10;
  int64 favorite_count = 11;
}

//用户登录、注册、信息请求
message UserRequest{
  int64 user_id=1;
  string username =2;
  string password=3;
}
//用户登录、注册响应
message UserResponse{
  int64 user_id =1;
  string token=2;
}
//用户信息响应
message UserDetailResponse{
  User user=1;
}
message SaveRequest{
  User user=1;
}

service UserService{
  rpc UserLogin(UserRequest) returns(UserResponse);
  rpc UserRegister(UserRequest) returns(UserResponse);
  rpc UserInfo(UserRequest) returns(UserDetailResponse);
  rpc GetUserById(UserRequest) returns(UserDetailResponse);
  rpc GetUserByName(UserRequest) returns(UserDetailResponse);
  //rpc Save(SaveRequest) returns(google.protobuf.Empty);
}